implementando solicitação de transporte e envio de email